--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Use a dark background color and a light font color */
 body {
-    background: linear-gradient(rgba(38, 36, 36, 0.673), rgba(43, 42, 42, 0.755)), url(img/FB_IMG_1665657773237.jpg);
+    background: linear-gradient(rgba(38, 36, 36, 0.673), rgba(43, 42, 42, 0.755)), url(FB_IMG_1665657773237.jpg);
     color: #fff;
     font-family: 'Titillium Web', sans-serif;
     margin: 0 auto;
